# afone_music_website

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
afone_web/: Dockerfile  manage.py  pyproject.toml
afone_web/afone_web/: asgi.py  settings.py  urls.py  wsgi.py
afone_web/docker/env/: .dev.env
afone_web/main_page/: apps.py  views.py
afone_web/main_page/templates/main_page/: index.html
conf/: nginx.conf
docker/env/: .env.dev
