[tool.poetry]
name = "afone-music-website"
version = "0.1.0"
description = ""
authors = ["Dmitrii Turetskikh <tureckihdmitriq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.2"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
